Added Compression to Backup